--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a testing project for a food review backend using MongoDB, Node.js, Express (Node.js)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
