--- a/.env_sample
+++ b/.env_sample
@@ -1,1 +1,3 @@
-MONGO_URI = 
+<!-- The values provided are all examples -->
+MONGO_URI = mongodb+srv://<username>:<password>@cluster0.ne4ud.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT = 8080
