--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tancrescens/food_backend#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.6",
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
     "nodemon": "^3.1.7"
